[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssfm-gpu"
version = "0.1.1"
authors = [
  { name="Egor Sedov", email="e.sedov@g.nsu.ru" },
]
description = "Tensorflow GPU version of split-step Fourier method for Nonlinear Schrodinger and Manakov equations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/esf0/ssfm-gpu"
"Bug Tracker" = "https://github.com/esf0/ssfm-gpu/issues"